changed use of String.isBlank to back-level Java version equivalent (trim + isEmpty)
addresses back-level Java compile break